Fix spacing issue in call to action

--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ li{
 }
 .left-4{
     display: flex;
-    width: 50%;
+    width: 60%;
     flex-direction: column;
     align-items: flex-start;
 }
